--- a/styles/styles.css
+++ b/styles/styles.css
@@ -870,7 +870,8 @@ input:checked + .darkModeSlider:before {
   height: 100vh;
   position: fixed;
   background: url("../assets/loadingimagebg.svg") center no-repeat;
-  background-size: 100px;
+  background-size: 150px;
+  background-position-y: 20vh;
   z-index: 1;
   opacity: 0;
   -webkit-animation: glassBounce 1.6s ease 1;
@@ -945,6 +946,9 @@ input:checked + .darkModeSlider:before {
   }
 }
 @media (max-width: 480px) {
+  main {
+    min-height: calc(100vh - 184px);
+  }
   .contentContainer {
     margin-top: 40px;
   }
